Rebased everything in order to start next exercise
