# src/dto/user.dto.ts
@@ -1,0 +1,5 @@
+export interface UserDTO {
+    id?: number;
+    username: string;
+    password: string;
+}
